--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Create pemfile
         run: |
+          mkdir -p ~/.ssh
           echo "${{ secrets.HAPI_SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
 
