--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -34,7 +34,7 @@ jobs:
           echo 'hosts:' >> inventory.yml
           echo '  app-server:' >> inventory.yml
           echo '    host: ${{ secrets.HAPI_HOST_IP }}' >> inventory.yml
-          echo '    user: ${{ secrets.HAPI_USER }} >> inventory.yml
+          echo '    user: ${{ secrets.HAPI_USER }}' >> inventory.yml
           echo '    pemfile: ~/.ssh/id_ed25519' >> inventory.yml
           echo '    with:' >> inventory.yml
           echo '      deploy_path: ~/deploy/laravel/{{stage}}' >> inventory.yml
