--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Create pemfile
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.HAPI_SSH_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
+          rm -f id_ed25519
+          echo "${{ secrets.HAPI_SSH_KEY }}" > id_ed25519
+          chmod 600 id_ed25519
 
       - name: Create inventory file
         run: |
@@ -35,7 +35,7 @@ jobs:
           echo '  app-server:' >> inventory.yml
           echo '    host: ${{ secrets.HAPI_HOST_IP }}' >> inventory.yml
           echo '    user: ${{ secrets.HAPI_USER }}' >> inventory.yml
-          echo '    pemfile: ~/.ssh/id_ed25519' >> inventory.yml
+          echo "    pemfile: $PWD/id_ed25519" >> inventory.yml
           echo '    with:' >> inventory.yml
           echo '      deploy_path: ~/deploy/laravel/{{stage}}' >> inventory.yml
           cat inventory.yml
