--- a/.github/workflows/ship.yml
+++ b/.github/workflows/ship.yml
@@ -37,7 +37,7 @@ jobs:
           echo '  app-server:' >> inventory.yml
           echo '    host: ${{ secrets.HAPI_HOST_IP }}' >> inventory.yml
           echo '    user: ${{ secrets.HAPI_USER }}' >> inventory.yml
-          echo "    pemfile: $PWD/.hapi/id_ed25519" >> inventory.yml
+          echo "    pemfile: $PWD/id_ed25519" >> inventory.yml
           echo '    with:' >> inventory.yml
           echo '      deploy_path: ~/deploy/laravel/{{stage}}' >> inventory.yml
           cat inventory.yml
